# kvs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: eeprom_store.rs  store_bak.rs.t
src/: alloc.rs  config.rs  grasshopper.rs  hole.rs  lib.rs  record.rs  record_ref.rs  store.rs
src/adapters/: fram.rs  mod.rs  paged.rs  ram.rs  spi.rs
tests/: basic_test.rs  crud_test.rs  serde_test.rs  store_test.rs  tiny.db
