[package]
name = "kvs"
version = "0.0.2"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Embedded Key-Value Store"
categories = ["no-std"]
keywords = ["key-value"]
documentation = "https://docs.rs/kvs"
repository = "https://github.com/dotcypress/kvs"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = { version = "^0.2.4", features = ["unproven"] }
hash32 = "0.2.1"
modular-bitfield = "0.11.2"

